# course

./: .dockerignore  .gitignore  Dockerfile  README.md  admin.py  auth.py  chat.py  course.py  db.py  docker-entrypoint.sh  homework.py  init_db.py  logger.py  main.py  model.py  practice.py  progress.py  pyproject.toml  stat.py
.github/workflows/: build-ui.yml
api/: admin.py  auth.py  course.py  db.py  homework.py  logger.py  main.py  model.py  progress.py  pyproject.toml  qa.py
ops/: Caddyfile  docker-compose.yaml
ops/db/: course.db
ops/script/: publish_ui.sh
ui/: README.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.js  vitest.config.js
ui/src/: App.vue  main.js
ui/src/api/: auth.js  chat.js  request.js  user.js
ui/src/components/: Layout.vue  Nav.vue
ui/src/router/: index.js
ui/src/stores/: user.js
ui/src/utils/: date.js
ui/src/views/: Admin.vue  Chat.vue  Course.vue  Homework.vue  HomeworkDetail.vue  HomeworkManage.vue  Login.vue  Practice.vue  PracticeDetail.vue  PracticeManage.vue  QuestionAndAnswer.vue  Stat.vue  Statistics.vue
